[gd_scene load_steps=14 format=2]

[ext_resource path="res://themes/rpgm_like/theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/gui/Screens.gd" type="Script" id=2]
[ext_resource path="res://scenes/gui/Labels/TitleText.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/Ren/nodes/ren_var_label.gd" type="Script" id=4]
[ext_resource path="res://addons/Ren/icons/ren_var_label.svg" type="Texture" id=5]
[ext_resource path="res://scenes/gui/QuickMenuButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/gui/SlotBox.gd" type="Script" id=7]
[ext_resource path="res://ubuntu-font-family/Ubuntu-B.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://scenes/gui/Labels/slot.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/gui/History.gd" type="Script" id=10]
[ext_resource path="res://scenes/gui/HistoryItem.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/gui/QuestsBox.tscn" type="PackedScene" id=12]

[sub_resource type="DynamicFont" id=1]

size = 40
use_mipmaps = false
use_filter = false
font_data = ExtResource( 8 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Screens" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 1 )
script = ExtResource( 2 )
_sections_unfolded = [ "Material", "Theme", "Visibility" ]
first_dialog = "example"
first_state = "start"

[node name="Panel" type="Panel" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1.0
margin_top = 1.0
margin_right = 1028.0
margin_bottom = 610.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="MainMenuDecorations" type="Control" parent="." index="1"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="TitleNVersion" type="Control" parent="MainMenuDecorations" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="HBox" type="HBoxContainer" parent="MainMenuDecorations/TitleNVersion" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 867.0
margin_top = 532.0
margin_right = 1008.0
margin_bottom = 589.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Title" parent="MainMenuDecorations/TitleNVersion/HBox" index="0" instance=ExtResource( 3 )]

margin_right = 91.0
margin_bottom = 57.0
rect_clip_content = false

[node name="RenValLabel" type="Label" parent="MainMenuDecorations/TitleNVersion/HBox" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 95.0
margin_top = 21.0
margin_right = 127.0
margin_bottom = 35.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "0.5.0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 4 )
__meta__ = {
"_editor_icon": ExtResource( 5 )
}
var_name = "version"
default = "0.5.0"
type = "str"

[node name="Navigation" type="Panel" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 204.0
margin_bottom = 599.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="Label" parent="Navigation" index="0" instance=ExtResource( 3 )]

margin_right = 1028.0
margin_bottom = 65.0
rect_clip_content = false
text = "Pause"

[node name="VBoxContainer" type="VBoxContainer" parent="Navigation" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 101.0
margin_right = 140.0
margin_bottom = 513.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 20
alignment = 0
_sections_unfolded = [ "Mouse", "Size Flags" ]

[node name="Hack" type="Container" parent="Navigation/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 140.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
_sections_unfolded = [ "Size Flags" ]

[node name="Start" parent="Navigation/VBoxContainer" index="1" instance=ExtResource( 6 )]

visible = false
margin_top = 20.0
margin_right = 140.0
margin_bottom = 52.0
text = "Start"
flat = false
align = 0

[node name="Return" parent="Navigation/VBoxContainer" index="2" instance=ExtResource( 6 )]

margin_top = 20.0
margin_right = 140.0
margin_bottom = 54.0
text = "Return"
flat = false
align = 0

[node name="History" parent="Navigation/VBoxContainer" index="3" instance=ExtResource( 6 )]

margin_top = 74.0
margin_right = 140.0
margin_bottom = 108.0
text = "History"
flat = false
align = 0

[node name="Quests" parent="Navigation/VBoxContainer" index="4" instance=ExtResource( 6 )]

margin_top = 128.0
margin_right = 140.0
margin_bottom = 162.0
text = "Quests"
flat = false
align = 0

[node name="Continue" parent="Navigation/VBoxContainer" index="5" instance=ExtResource( 6 )]

visible = false
margin_top = 20.0
margin_right = 140.0
margin_bottom = 52.0
text = "Continue"
flat = false
align = 0

[node name="Load" parent="Navigation/VBoxContainer" index="6" instance=ExtResource( 6 )]

margin_top = 182.0
margin_right = 140.0
margin_bottom = 216.0
text = "Load"
flat = false
align = 0

[node name="Save" parent="Navigation/VBoxContainer" index="7" instance=ExtResource( 6 )]

margin_top = 236.0
margin_right = 140.0
margin_bottom = 270.0
text = "Save"
flat = false
align = 0

[node name="Preferences" parent="Navigation/VBoxContainer" index="8" instance=ExtResource( 6 )]

margin_top = 290.0
margin_right = 140.0
margin_bottom = 324.0
text = "Options"
flat = false
align = 0

[node name="About" parent="Navigation/VBoxContainer" index="9" instance=ExtResource( 6 )]

margin_top = 344.0
margin_right = 140.0
margin_bottom = 378.0
text = "About"
flat = false
align = 0

[node name="Help" parent="Navigation/VBoxContainer" index="10" instance=ExtResource( 6 )]

margin_top = 398.0
margin_right = 140.0
margin_bottom = 432.0
text = "Help"
flat = false
align = 0

[node name="Quit" parent="Navigation/VBoxContainer" index="11" instance=ExtResource( 6 )]

margin_top = 452.0
margin_right = 140.0
margin_bottom = 486.0
text = "Quit"
flat = false
align = 0

[node name="SlotBox" type="VBoxContainer" parent="." index="3"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 257.0
margin_top = 13.0
margin_right = 959.0
margin_bottom = 545.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
script = ExtResource( 7 )

[node name="Title" type="Label" parent="SlotBox" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 702.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Save/Load"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="GridContainer" type="GridContainer" parent="SlotBox" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 58.0
margin_right = 702.0
margin_bottom = 532.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3
_sections_unfolded = [ "Grow Direction", "Rect", "Size Flags" ]

[node name="1" parent="SlotBox/GridContainer" index="0" instance=ExtResource( 9 )]

margin_right = 231.0
margin_bottom = 235.0
rect_clip_content = false

[node name="2" parent="SlotBox/GridContainer" index="1" instance=ExtResource( 9 )]

margin_left = 235.0
margin_right = 466.0
margin_bottom = 235.0
rect_clip_content = false

[node name="3" parent="SlotBox/GridContainer" index="2" instance=ExtResource( 9 )]

margin_left = 470.0
margin_right = 701.0
margin_bottom = 235.0
rect_clip_content = false

[node name="4" parent="SlotBox/GridContainer" index="3" instance=ExtResource( 9 )]

margin_top = 239.0
margin_right = 231.0
margin_bottom = 474.0
rect_clip_content = false

[node name="5" parent="SlotBox/GridContainer" index="4" instance=ExtResource( 9 )]

margin_left = 235.0
margin_top = 239.0
margin_right = 466.0
margin_bottom = 474.0
rect_clip_content = false

[node name="6" parent="SlotBox/GridContainer" index="5" instance=ExtResource( 9 )]

margin_left = 470.0
margin_top = 239.0
margin_right = 701.0
margin_bottom = 474.0
rect_clip_content = false

[node name="HistoryBox" type="VBoxContainer" parent="." index="4"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 257.0
margin_top = 11.0
margin_right = 959.0
margin_bottom = 545.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Title" type="Label" parent="HistoryBox" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 702.0
margin_bottom = 46.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "History"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="ScrollContainer" type="ScrollContainer" parent="HistoryBox" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 50.0
margin_right = 702.0
margin_bottom = 534.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false
scroll_horizontal = 0
scroll_vertical_enabled = true
scroll_vertical = 0
scroll_deadzone = 0
_sections_unfolded = [ "Scroll" ]

[node name="History" type="VBoxContainer" parent="HistoryBox/ScrollContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 702.0
margin_bottom = 484.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5
alignment = 0
script = ExtResource( 10 )
_sections_unfolded = [ "Size Flags", "custom_constants" ]
HistoryItemTemplate = ExtResource( 11 )

[node name="QuestsBox" parent="." index="5" instance=ExtResource( 12 )]

visible = false
margin_left = 201.0
margin_top = 2.0
margin_right = 1025.0
margin_bottom = 607.0

[connection signal="pressed" from="Navigation/VBoxContainer/Start" to="." method="_on_Start_pressed"]

[connection signal="pressed" from="Navigation/VBoxContainer/Return" to="." method="_on_Return_pressed"]

[connection signal="pressed" from="Navigation/VBoxContainer/History" to="." method="_on_History_pressed"]

[connection signal="pressed" from="Navigation/VBoxContainer/Quests" to="." method="_on_Quests_pressed"]

[connection signal="pressed" from="Navigation/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]

[connection signal="pressed" from="Navigation/VBoxContainer/Load" to="." method="_on_Load_pressed"]


